Fix inconsistent dark mode - only light for now.

--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,9 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
-  color: rgb(255 255 255 / 87%);
-  background-color: #242424;
+  color-scheme: light;
+  color: #213547;
+  background-color: #fff;
   font-synthesis: none;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
@@ -43,25 +43,11 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
+  background-color: #f9f9f9;
   cursor: pointer;
   transition: background-color 0.25s;
 }
 
 .card {
   padding: 2em;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #fff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
 }
